--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ authors = ["James Davis <jamesmariodavis@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7.1"
 yapf = "^0.31.0"
+pylint = "^2.10.2"
 
 [tool.poetry.dev-dependencies]
