--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,13 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.187.0/containers/python-3
 {
-	"name": "python_base_vscode",
+	"name": "${localWorkspaceFolderBasename}_vscode",
 	"image": "python_base_dev:latest",
-	"containerEnv": {"PYTHONPATH": "/workspaces/python_base"},
-
+	"containerEnv": {
+		"PYTHONPATH": "/workspaces/${localWorkspaceFolderBasename}"
+	},
 	// Set *default* container specific settings.json values on container create.
-	"settings": { 
+	"settings": {
 		"python.pythonPath": "/usr/local/bin/python",
 		"python.languageServer": "Pylance",
 		"python.linting.enabled": true,
@@ -15,7 +16,6 @@
 		"editor.formatOnSave": true,
 		"python.formatting.provider": "yapf",
 	},
-
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"ms-python.python",
@@ -23,13 +23,10 @@
 		"ms-azuretools.vscode-docker",
 		"ms-vscode.powershell"
 	],
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
-
 	// Use 'runArgs' to customize docker run command.
 	// "runArgs": []
 }
