--- a/.dockerignore
+++ b/.dockerignore
@@ -1,24 +1,6 @@
+Dockerfile.*
+scripts.*
+README.md
 .git
 .DS_Store
-
-.mypy_cache
-.pytest_cache
-__pycache__
-*/__pycache__
-.tox
-
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+.devcontainer
