--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,51 +1,18 @@
-FROM python:3.8.11-slim-buster
+# syntax=docker/dockerfile:1
+FROM base_image
 
-# define build path and set to working directory
-# build path is used to install dependencies in image
-ENV BUILD_PATH /build/
 ENV IS_PROD false
 ENV IS_DEV true
-WORKDIR ${BUILD_PATH}
 
-# install system dependencies
+# install additional dependencies
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
-    gcc \
-    python3-psutil \
-    libpq-dev \
-    curl \
     make \
     unzip \
-    git \
-    build-essential && \
+    git && \
     rm -rf /var/lib/apt/lists/*
 
-# copy files for poetry install
-COPY pyproject.toml ${BUILD_PATH}/pyproject.toml
-COPY poetry.lock ${BUILD_PATH}/poetry.lock
-
-# update pip to speed up poetry
-RUN pip install --upgrade pip
-
-# poetry stuff
-ENV PYTHONUNBUFFERED=1 \
-    POETRY_VERSION=1.1.6 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=off \
-    PIP_DISABLE_PIP_VERSION_CHECK=on \
-    PIP_DEFAULT_TIMEOUT=100 \
-    POETRY_HOME="/opt/poetry" \
-    POETRY_VIRTUALENVS_IN_PROJECT=false \
-    POETRY_VIRTUALENVS_CREATE=false \
-    POETRY_NO_INTERACTION=1
-
-ENV PATH="${PATH}:/root/.local/bin"
-
-# Install Poetry and update path - respects $POETRY_VERSION & $POETRY_HOME
-RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-ENV PATH="${PATH}:${POETRY_HOME}/bin"
-
-# install python
+# install python and packages
 RUN poetry install
 
 # clean up build
