--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["James Davis <jamesmariodavis@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8.11"
 Flask = "^2.0.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.31.0"
