--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,6 +1,9 @@
 # syntax=docker/dockerfile:1
 FROM python:3.8.11-slim-buster
 
+# capture port to use for flask app from build arg
+ARG FLASK_APP_PORT_ARG
+
 # define build path and set to working directory
 # build path is used to install dependencies in image
 ENV BUILD_PATH /build/
@@ -39,11 +42,11 @@ ENV PATH="${PATH}:${POETRY_HOME}/bin"
 
 # configure gunicorn server. used to configure gunicorn commands
 # set APP_LOCATION to main entrypoint for flask app
-ENV FLASK_APP_FILE_LOCATION flask_app
+ENV FLASK_APP_MODULE_LOCATION flask_app
 # set APP_METHOD_NAME to name of application defined in python
 ENV FLASK_APP_NAME_IN_CODE app
 # use default flask port 5000
-ENV FLASK_APP_PORT 5000
+ENV FLASK_APP_PORT ${FLASK_APP_PORT_ARG}
 # set workers to number of cpu cores
 ENV FLASK_APP_WORKERS 1
 ENV FLASK_APP_THREADS 8
