--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,5 +1,6 @@
 # syntax=docker/dockerfile:1
-FROM base_image
+ARG BASE_IMAGE_NAME_ARG
+FROM ${BASE_IMAGE_NAME_ARG}
 
 ENV IS_PROD false
 ENV IS_DEV true
