switch to alpine

--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,8 +1,5 @@
 # syntax=docker/dockerfile:1
-FROM python:3.8.11-slim-buster
-
-# capture port to use for flask app from build arg
-ARG FLASK_APP_PORT_ARG
+FROM python:3.8-alpine
 
 # define build path and set to working directory
 # build path is used to install dependencies in image
@@ -10,17 +7,11 @@ ENV BUILD_PATH /build/
 WORKDIR ${BUILD_PATH}
 
 # install system dependencies
-RUN apt-get update && \
-    apt-get install --no-install-recommends -y \
+RUN apk update && \
+    apk add \
     gcc \
-    python3-psutil \
-    libpq-dev \
-    curl \
-    build-essential && \
-    rm -rf /var/lib/apt/lists/*
-
-# update pip to speed up poetry
-RUN pip install --upgrade pip
+    curl && \
+    pip install --upgrade pip
 
 # poetry stuff
 ENV PYTHONUNBUFFERED=1 \
@@ -39,19 +30,6 @@ ENV PATH="${PATH}:/root/.local/bin"
 # Install Poetry and update path - respects $POETRY_VERSION & $POETRY_HOME
 RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
 ENV PATH="${PATH}:${POETRY_HOME}/bin"
-
-# configure gunicorn server. used to configure gunicorn commands
-# set APP_LOCATION to main entrypoint for flask app
-ENV FLASK_APP_MODULE_LOCATION flask_app
-# set APP_METHOD_NAME to name of application defined in python
-ENV FLASK_APP_NAME_IN_CODE app
-# use default flask port 5000
-ENV FLASK_APP_PORT ${FLASK_APP_PORT_ARG}
-# set workers to number of cpu cores
-ENV FLASK_APP_WORKERS 1
-ENV FLASK_APP_THREADS 8
-# timeout is set to 0 to disable the timeouts of the workers to allow Google Cloud Run to handle instance scaling
-ENV FLASK_APP_TIMEOUT 0
 
 # allow statements and log messages to immediately appear in the Knative logs in server
 ENV PYTHONUNBUFFERED True
