--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,29 +1,71 @@
-# syntax=docker/dockerfile:1
+# syntax=docker/dockerfile:1.3
 ARG BASE_IMAGE_NAME_ARG
 FROM ${BASE_IMAGE_NAME_ARG}
 
+# set flags for internal use
 ENV IS_PROD false
 ENV IS_DEV true
 
-# capture flask app args passed from build script
-# see scripts.sh for passed values
-ARG FLASK_APP_MODULE_LOCATION_ARG
-ARG FLASK_APP_NAME_IN_CODE_ARG
+# build path is used to install dependencies in image
+ENV BUILD_PATH=/build
+WORKDIR ${BUILD_PATH}
+
+# install docker
+RUN apk add \
+    git \
+    docker
+
+# install gcloud and add to path
+RUN	curl -sSL https://sdk.cloud.google.com > gcl &&\
+    bash gcl \
+    --install-dir=/gcloud \
+    --disable-prompts
+ENV PATH="$PATH:/gcloud/google-cloud-sdk/bin"
+
+# set references to use docker and gcloud in container
+ARG GCLOUD_REGION_ARG
+ARG GCLOUD_PROJECT_ID_ARG
+ARG PROD_IMAGE_NAME_ARG
+ARG GCLOUD_SERVICE_NAME_ARG
+ARG GCLOUD_ALLOW_UNAUTHENTICATED_PARAM_ARG
+ENV PROD_IMAGE_NAME=${PROD_IMAGE_NAME_ARG}\
+    GCLOUD_PROJECT_ID=${GCLOUD_PROJECT_ID_ARG} \
+    GCLOUD_REGION=${GCLOUD_REGION_ARG} \
+    GCLOUD_SERVICE_NAME=${GCLOUD_SERVICE_NAME_ARG}\
+    GCLOUD_ALLOW_UNAUTHENTICATED_PARAM=${GCLOUD_ALLOW_UNAUTHENTICATED_PARAM_ARG}
+
+# configure gcloud
+RUN gcloud config set run/region ${GCLOUD_REGION} &&\
+    gcloud config set project ${GCLOUD_PROJECT_ID} &&\
+    gcloud auth configure-docker
+
+# re-install poetry for dev use
+# poetry stuff
+ENV PYTHONUNBUFFERED=1 \
+    POETRY_VERSION=1.1.6 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=off \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_DEFAULT_TIMEOUT=100 \
+    POETRY_HOME="/opt/poetry" \
+    POETRY_VIRTUALENVS_IN_PROJECT=false \
+    POETRY_VIRTUALENVS_CREATE=false \
+    POETRY_NO_INTERACTION=1
+
+ENV PATH="${PATH}:/root/.local/bin"
+ENV PATH="${PATH}:${POETRY_HOME}/bin"
+
+# copy files for poetry install
+COPY pyproject.toml ${BUILD_PATH}/pyproject.toml
+COPY poetry.lock ${BUILD_PATH}/poetry.lock
+
+# Install Poetry, python, and libraries - respects $POETRY_VERSION & $POETRY_HOME
+RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python - &&\
+    poetry install
+
+# copy port arg as env variable for reference
 ARG FLASK_APP_PORT_ARG
-ARG FLASK_APP_WORKERS_ARG
-ARG FLASK_APP_THREADS_ARG
-ARG FLASK_APP_TIMEOUT_ARG
-
-# inject passed arguments as permanent environment variables
-ENV FLASK_APP_MODULE_LOCATION ${FLASK_APP_MODULE_LOCATION_ARG}
-ENV FLASK_APP_NAME_IN_CODE ${FLASK_APP_NAME_IN_CODE_ARG}
-ENV FLASK_APP_PORT ${FLASK_APP_PORT_ARG}
-ENV FLASK_APP_WORKERS ${FLASK_APP_WORKERS_ARG}
-ENV FLASK_APP_THREADS ${FLASK_APP_THREADS_ARG}
-ENV FLASK_APP_TIMEOUT ${FLASK_APP_TIMEOUT_ARG}
-
-# install python and packages
-RUN poetry install
+ENV PORT=${FLASK_APP_PORT_ARG}
 
 # clean up build
 WORKDIR /
