--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -13,10 +13,17 @@ ENV IS_DEV true
 ENV BUILD_PATH=/build
 WORKDIR ${BUILD_PATH}
 
-# install docker
-RUN apk add \
+# install dependencies, including docker
+# see "socket solution": https://jpetazzo.github.io/2015/09/03/do-not-use-docker-in-docker-for-ci/
+# musl-dev, linux-headers, g++ required for numpy installation
+RUN apk update &&\
+    apk add \
     git \
-    docker
+    docker \
+    musl-dev \
+    linux-headers \
+    g++ &&\
+    pip install --upgrade pip
 
 # install gcloud and add to path
 RUN	curl -sSL https://sdk.cloud.google.com > gcl &&\
