--- a/.pylintrc
+++ b/.pylintrc
@@ -78,7 +78,8 @@ disable=missing-class-docstring,
       missing-module-docstring,
       missing-function-docstring,
       invalid-name,
-      line-too-long
+      line-too-long,
+      too-few-public-methods
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
