--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,20 @@ markers=[
     "externals_deps: test requires internet connection and valid secrets",
 ]
 
+# https://python-poetry.org/docs/dependency-specification/
 [tool.poetry.dependencies]
-python = "^3.8.11"
+python = ">=3.8, <3.11"
 Flask = "^2.0.1"
 gunicorn = "^20.1.0"
 google-api-python-client = "^2.19.1"
 google-auth-httplib2 = "^0.1.0"
 google-auth-oauthlib = "^0.4.6"
+Jinja2 = "^3.0.1"
+# freeze numpy at exact version to prevent recompile
+numpy = "1.21.2"
+# freeze pandas at exact version to prevent recompile
+pandas = "1.3.2"
+plotly = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.31.0"
