--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -3,6 +3,30 @@
 ARG BASE_BUILDER_IMAGE_NAME_ARG
 FROM ${BASE_BUILDER_IMAGE_NAME_ARG} as base-builder
 
+# re-install poetry for any updated packages
+# poetry stuff
+ENV PYTHONUNBUFFERED=1 \
+    POETRY_VERSION=1.1.6 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=off \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_DEFAULT_TIMEOUT=100 \
+    POETRY_HOME="/opt/poetry" \
+    POETRY_VIRTUALENVS_IN_PROJECT=false \
+    POETRY_VIRTUALENVS_CREATE=false \
+    POETRY_NO_INTERACTION=1
+
+ENV PATH="${PATH}:/root/.local/bin"\
+    PATH="${PATH}:${POETRY_HOME}/bin"
+
+# copy files for poetry install
+COPY pyproject.toml ${BUILD_PATH}/pyproject.toml
+COPY poetry.lock ${BUILD_PATH}/poetry.lock
+
+# Install Poetry, python, and libraries - respects $POETRY_VERSION & $POETRY_HOME
+RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python - &&\
+    poetry install --no-dev
+
 FROM python:3.8-alpine
 # copy coin-or binaries and add to path
 COPY --from=base-builder /coin-or /coin-or
