--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ Jinja2 = "^3.0.1"
 numpy = "1.21.2"
 # freeze pandas at exact version to prevent recompile
 pandas = "1.3.2"
-plotly = "^5.3.1"
+plotly = "5.3.1"
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.31.0"
