--- a/.dockerignore
+++ b/.dockerignore
@@ -15,4 +15,7 @@ README.md
 google_key.json
 
 # ignore temporary working files
-plotly_figure.html
+local_files/**
+
+# ignore all files in cache
+cache/**
