--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,13 @@ python = ">=3.8, <3.11"
 Flask = "^2.0.1"
 gunicorn = "^20.1.0"
 google-api-python-client = "^2.19.1"
-google-auth-httplib2 = "^0.1.0"
-google-auth-oauthlib = "^0.4.6"
 Jinja2 = "^3.0.1"
-# freeze numpy at exact version to prevent recompile
-numpy = "1.21.2"
-# freeze pandas at exact version to prevent recompile
-pandas = "1.3.2"
-# freeze plotly at exact version to prevent recompile
-plotly = "5.3.1"
+numpy = "^1.21.2"
+pandas = "^1.3.2"
+plotly = "^5.3.1"
+grpcio = "^1.40.0"
+werkzeug = "^2.0.1"
+ray = {extras = ["serve"], version = "^1.6.0"}
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.31.0"
