--- a/docker/Dockerfile.base-builder
+++ b/docker/Dockerfile.base-builder
@@ -23,8 +23,7 @@ RUN apt-get update && \
     git \
     curl \
     musl-dev \
-    linux-headers-generic \
-    && pip install --upgrade pip
+    linux-headers-generic
 
 # build coin-or binaries
 ARG INCLUDE_CBC
@@ -38,26 +37,4 @@ RUN mkdir /coin-or &&\
     --latest-release \
     --static ADD_FFLAGS=-fallow-argument-mismatch ;\
     fi
-
-# poetry stuff
-ENV PYTHONUNBUFFERED=1 \
-    POETRY_VERSION=1.1.6 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=off \
-    PIP_DISABLE_PIP_VERSION_CHECK=on \
-    PIP_DEFAULT_TIMEOUT=100 \
-    POETRY_HOME="/opt/poetry" \
-    POETRY_VIRTUALENVS_IN_PROJECT=false \
-    POETRY_VIRTUALENVS_CREATE=false \
-    POETRY_NO_INTERACTION=1
-
-ENV PATH="${PATH}:/root/.local/bin"
-ENV PATH="${PATH}:${POETRY_HOME}/bin"
-
-# copy files for poetry install
-COPY pyproject.toml ${BUILD_PATH}/pyproject.toml
-COPY poetry.lock ${BUILD_PATH}/poetry.lock
-
-# Install Poetry, python, and libraries - respects $POETRY_VERSION & $POETRY_HOME
-RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python - &&\
-    poetry install --no-dev
+    
