--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ pandas = "^1.3.2"
 plotly = "^5.3.1"
 grpcio = "^1.40.0"
 werkzeug = "^2.0.1"
-ray = {extras = ["serve"], version = "^1.6.0"}
+ray = {extras = ["default"], version = "^1.6.0"}
+# required for ray dashboard and not included in ray
+colorama = "^0.4.4" # installed
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.31.0"
