--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
 // For advanced configuration, see https://code.visualstudio.com/docs/remote/containers-advanced
 {
 	"image": "${localWorkspaceFolderBasename}-dev:latest",
+	"remoteUser": "root",
 	"forwardPorts": [
 		5000, // flask app
 		8265, // ray dashboard
@@ -17,6 +18,7 @@
 	"workspaceFolder": "/app",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
+		"python.defaultInterpreterPath": "/usr/local/bin/python",
 		"python.pythonPath": "/usr/local/bin/python",
 		"python.languageServer": "Pylance",
 		"python.linting.enabled": true,
