--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.3
 
-FROM python:3.8-slim-bullseye as base-builder
+FROM python:3.9-slim-bullseye as base-builder
 
 # build path is used to install dependencies in image
 ENV BUILD_PATH=/build
@@ -39,11 +39,11 @@ RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-
     poetry install --no-dev
 
 # build base image
-FROM python:3.8-slim-bullseye
+FROM python:3.9-slim-bullseye
 
 # copy python and libraries
 COPY --from=base-builder /usr/local/bin /usr/local/bin
-COPY --from=base-builder /usr/local/lib/python3.8 /usr/local/lib/python3.8
+COPY --from=base-builder /usr/local/lib/python3.9 /usr/local/lib/python3.9
 
 # install minimal dependencies for convenience
 # liblapack-dev referenced by scientific computing (numpy)
@@ -67,6 +67,7 @@ ARG FLASK_APP_THREADS_ARG
 ARG FLASK_APP_TIMEOUT_ARG
 
 # inject passed arguments as permanent environment variables
+# variables will be used in prod to deploy
 ENV FLASK_APP_MODULE_LOCATION=${FLASK_APP_MODULE_LOCATION_ARG}\
     FLASK_APP_NAME_IN_CODE=${FLASK_APP_NAME_IN_CODE_ARG} \
     FLASK_APP_WORKERS=${FLASK_APP_WORKERS_ARG} \
