--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ markers=[
 
 # https://python-poetry.org/docs/dependency-specification/
 [tool.poetry.dependencies]
-python = ">=3.8, <3.11"
+python = ">=3.9, <3.10"
 Flask = "^2.0.1"
 gunicorn = "^20.1.0"
 google-api-python-client = "^2.19.1"
@@ -24,6 +24,7 @@ werkzeug = "^2.0.1"
 ray = {extras = ["default"], version = "^1.6.0"}
 # required for ray dashboard and not included in ray
 colorama = "^0.4.4" # installed
+json5 = "^0.9.6"
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.31.0"
