--- a/.pylintrc
+++ b/.pylintrc
@@ -79,7 +79,10 @@ disable=missing-class-docstring,
       missing-function-docstring,
       invalid-name,
       line-too-long,
-      too-few-public-methods
+      too-few-public-methods,
+      too-many-arguments,
+      too-few-public-methods,
+      duplicate-code
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
